--- a/git/Page 2.html
+++ b/git/Page 2.html
@@ -19,9 +19,9 @@
             <select id="Civil Status" Type="Text" placeholder="Civil Satus" Size=2>
                 <option value="Married">Married</option>
                 <option value="Unmarried">Unmarried</option>
-                <option value="divorced">divorced</option>
-                <option value="separated">separated</option>
-                <option value="widowed">widowed</option>
+                <option value="divorced">Divorced</option>
+                <option value="separated">Separated</option>
+                <option value="widowed">Widowed</option>
             </select>
         </div>
         <div class="input-element">
@@ -93,8 +93,7 @@
          </div>
          <div class="input-element">
             <input id="Submit" type="Submit" value="Submit">
-         </div>
-         
+         </div>      
    </form>
 </body>
 </html>
